@@ -1,3 +1,4 @@
+2024/5/27	連投あぼーん
 2024/5/26	フィルタリング補助、ホワイトリスト型自動一方あぼーん
 2024/5/16	ログにキャラを表示する、ログを自動で色分けする、マップを消すオプション
 2023/12/7	#ikaoniコマンド
@@ -33,6 +34,7 @@
 2022/6/11	音声入力
 2022/6/5	名無しナンバリング、自動あぼーん、動画配信を別タブで開く、メンション通知機能、ログ右クリックメニュー
 
+2024/5/27	Block or ignore spammer
 2024/5/26	Filtering helper, Allowlist mode
 2024/5/16	Display icon in log, Auto colored log, Hide map
 2023/12/7	#ikaoni
